dump/docker-registry-ui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: registry-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: registry-ui
    spec:
      containers:
      - name: registry-ui
        image: docker.io/joxit/docker-registry-ui:latest
        ports:
        - containerPort: 5000
          protocol: TCP
          name: 5000-tcp
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            cpu: 400m
            memory: 256Mi
