dump/docker-registry-ui/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui
  labels:
    app: registry-ui
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 5000
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: registry-ui
    weight: 100
  wildcardPolicy: None
